# chemLLM

./: .gitignore  Fine_tune_Mistral_7b_with_DPO.ipynb  Llama_3_1_8B.ipynb  README.md  Training_improvement.md  performance_benchmark.py  pyproject.toml
.llms-txt/: transformer-llms.txt
Experiments/: GPT.ipynb  batch_optimization.py  data.ipynb  diagnostic_test.py  gpt2model.py  model_optimizations.py  optimized_training_complete.py  optimizer_improvements.py  performance_improvements.py  train_gpt2.py
refactored_pipeline/: DESIGN_ANALYSIS.md  REFACTORING_PLAN.md
refactored_pipeline/interfaces/: __init__.py  data_source.py  model.py
refactored_training/: README.md  REFACTORING_PLAN.md  advanced_optimizations.py  chemllm_training_interactive.ipynb  enhanced_training.py  performance_monitoring.py  production_features.py  pyproject.toml  requirements.txt
refactored_training/chemllm.egg-info/: entry_points.txt  requires.txt
refactored_training/config/: data_config.py
refactored_training/examples/: monitored_training.py  production_demo.py  production_training.py  simple_production_test.py  simple_training.py
refactored_training/utils/: data_utils.py
src/chemllm/: __init__.py
