[project]
name = "chemllm"
version = "0.1.0"
description = "Chemical Language Model Training Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "jupyterlab>=4.0",
    "tiktoken>=0.5.1",
    "matplotlib>=3.7.1",
    "tensorflow>=2.18.0",
    "tqdm>=4.66.1",
    "numpy>=1.26,<2.1",
    "pandas>=2.2.1",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "datasets>=3.6.0",
    "python-dotenv>=1.1.1",
    "rensa>=0.2.7",
    "semhash>=0.3.0",
    "thop>=0.1.1.post2209072238",
    "transformers>=4.53.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "nbval",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chemllm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
